--- a/app/src/processing/app/Resources_ja.properties
+++ b/app/src/processing/app/Resources_ja.properties
@@ -851,26 +851,26 @@ serialMenu\ is\ null=serialMenu\u304cnull\u3067\u3059
 name\ is\ null=name\u304cnull\u3067\u3059
 
 #: Editor.java:961
-!Plug\ Now...=
+Plug\ Now...=\u3044\u307e\u63a5\u7d9a\u3059\u308b...
 
 #: Editor.java:991 Editor.java:1010
 error\ retrieving\ port\ list=\u30dd\u30fc\u30c8\u540d\u306e\u4e00\u89a7\u3092\u53d6\u5f97\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 
 #: Editor.java:1017 Editor.java:1043 Editor.java:1067
-!(not\ yet\ detected)=
+(not\ yet\ detected)=\uff08\u307e\u3060\u691c\u51fa\u3055\u308c\u3066\u3044\u307e\u305b\u3093\uff09
 
 #: Editor.java:1019
-!Plug\ Arduino\ to\ PC\ now\ and\ click\ OK\ to\ select\ the\ serial\ port.=
+Plug\ Arduino\ to\ PC\ now\ and\ click\ OK\ to\ select\ the\ serial\ port.=Arduino\u30dc\u30fc\u30c9\u3092PC\u306b\u63a5\u7d9a\u3057\u3001\u30b7\u30ea\u30a2\u30eb\u30dd\u30fc\u30c8\u304c\u691c\u51fa\u3055\u308c\u305f\u3089OK\u3092\u30af\u30ea\u30c3\u30af\u3057\u3066\u304f\u3060\u3055\u3044\u3002
 
 #: Editor.java:1020
-!Detected\ port\:=
+Detected\ port\:=\u691c\u51fa\u3055\u308c\u305f\u30b7\u30ea\u30a2\u30eb\u30dd\u30fc\u30c8\uff1a
 
 #: Editor.java:1031
-!Plug\ Now=
+Plug\ Now=\u30b7\u30ea\u30a2\u30eb\u30dd\u30fc\u30c8\u3092\u63a5\u7d9a\u3059\u308b
 
 #: Editor.java:1069
 #, java-format
-!Serial\ port\ "{0}"\ selected.=
+Serial\ port\ "{0}"\ selected.=\u30b7\u30ea\u30a2\u30eb\u30dd\u30fc\u30c8\u300c{0}\u300d\u304c\u9078\u629e\u3055\u308c\u307e\u3057\u305f\u3002
 
 #: Editor.java:1083
 Help=\u30d8\u30eb\u30d7
