--- a/todo.txt
+++ b/todo.txt
@@ -1,27 +1,26 @@
 0101E0006 energia
 
-[U] = Assigned and under development
+[A] = Assigned and under development
 [X] = Completed
-[?] = Unassigned and needs work
 [ ] = Unassigned and needs an owner
 
 -= Higest priority first =-
 
 [ ] 
     [ ] OS X serial driver bug
-    [ ] Windows driver compatibility with mspdebug / mspdebug compatibility with mspdebug
+    [X] Windows driver compatibility with mspdebug / mspdebug compatibility with mspdebug
  
 @ Core functionality
 	Time
-		[ ] micros()
+		[X] micros()
 
 	Advanced I/O
 		[X] tone()
 		[X] noTone()
 	
 	Random Numbers
-		[ ] randomSeed()
-		[ ] random()
+		[X] randomSeed()
+		[X] random()
 
 
 @ Libraries
@@ -33,10 +32,10 @@
 	[ ] USI I2C slave (master implemented but needs work)
 	[X] SPI support (needs testing)
 	[ ] CapTouch library
-	[ ] IRremote
+	[A] IRremote
 
 @ Documentation
-    [ ] Know issues list
+    [X] Know issues list (https://github.com/energia/Energia/wiki/Know-Issues)
     [X] Bug fix / new feature review process
     [ ] Incompatibilities
     [X] Coding Style Guide
