fixed quotes in italian translation

--- a/app/src/processing/app/Resources_it.properties
+++ b/app/src/processing/app/Resources_it.properties
@@ -221,7 +221,7 @@ OK=OK
 
 #: Editor.java:2100
 #, java-format
-The\ file\ "{0}"\ needs\ to\ be\ inside\na\ sketch\ folder\ named\ "{1}".\nCreate\ this\ folder,\ move\ the\ file,\ and\ continue?=Il file "{0}" deve essere all'interno\ndi una cartella sketch di nome "{1}".\nCreare questa cartella, spostare il file e continuare?
+The\ file\ "{0}"\ needs\ to\ be\ inside\na\ sketch\ folder\ named\ "{1}".\nCreate\ this\ folder,\ move\ the\ file,\ and\ continue?=Il file "{0}" deve essere all''interno\ndi una cartella sketch di nome "{1}".\nCreare questa cartella, spostare il file e continuare?
 
 #: Editor.java:2109
 Moving=Sto spostando
