Add firmware update and smartconfig to CC3000 library

--- a/libraries/SimplelinkWifi/WiFi.cpp.org
+++ b/libraries/SimplelinkWifi/WiFi.cpp.org
@@ -1,6 +1,5 @@
 #include "WiFi.h"
 #include "utility/SimplelinkWifi.h"
-#include "fw_patch.h"
 #include "Energia.h"
 
 #define DISABLE	(0)
@@ -55,10 +54,6 @@ int WiFiClass::begin(char* ssid)
 	wlan_init(CC3000_UsynchCallback, sendWLFWPatch, sendDriverPatch, sendBootLoaderPatch, ReadWlanInterruptPin, WlanInterruptEnable, WlanInterruptDisable, WriteWlanPin);
 	
 	wlan_start(0);
-
-	/* This will ensure that CC3000 does not attempt to connect to a previously configuration from SmartConfig session */
-	wlan_ioctl_set_connection_policy(DISABLE, DISABLE, DISABLE);
-
 	wlan_set_event_mask(HCI_EVNT_WLAN_KEEPALIVE|HCI_EVNT_WLAN_UNSOL_INIT|HCI_EVNT_WLAN_ASYNC_PING_REPORT);
 
 	wlan_connect(WLAN_SEC_UNSEC, ssid, strlen(ssid), NULL, NULL, 0);
@@ -81,10 +76,6 @@ int WiFiClass::begin(char* ssid, const char* pass)
 	wlan_init(CC3000_UsynchCallback, sendWLFWPatch, sendDriverPatch, sendBootLoaderPatch, ReadWlanInterruptPin, WlanInterruptEnable, WlanInterruptDisable, WriteWlanPin);
 
 	wlan_start(0);
-
-	/* This will ensure that CC3000 does not attempt to connect to a previously configuration from SmartConfig session */
-	wlan_ioctl_set_connection_policy(DISABLE, DISABLE, DISABLE);
-
 	wlan_set_event_mask(HCI_EVNT_WLAN_KEEPALIVE|HCI_EVNT_WLAN_UNSOL_INIT|HCI_EVNT_WLAN_ASYNC_PING_REPORT);
 
 	wlan_connect(WLAN_SEC_WPA2, ssid, strlen(ssid), NULL, (unsigned char *)pass, strlen((char *)(pass)));
@@ -107,10 +98,6 @@ int WiFiClass::begin(char* ssid, uint8_t key_idx, unsigned char *key)
 	wlan_init(CC3000_UsynchCallback, sendWLFWPatch, sendDriverPatch, sendBootLoaderPatch, ReadWlanInterruptPin, WlanInterruptEnable, WlanInterruptDisable, WriteWlanPin);
 	
 	wlan_start(0);
-
-	/* This will ensure that CC3000 does not attempt to connect to a previously configuration from SmartConfig session */
-	wlan_ioctl_set_connection_policy(DISABLE, DISABLE, DISABLE);
-
 	wlan_set_event_mask(HCI_EVNT_WLAN_KEEPALIVE|HCI_EVNT_WLAN_UNSOL_INIT|HCI_EVNT_WLAN_ASYNC_PING_REPORT);
 
 	wlan_connect(WLAN_SEC_WEP, ssid, strlen(ssid), NULL, key, key_idx);
@@ -124,14 +111,14 @@ int WiFiClass::begin(char* ssid, uint8_t key_idx, unsigned char *key)
 }
 
 // Do stuff before smartconfig
-int WiFiClass::begin(int patchesAvailableAtHost)
+int WiFiClass::begin()
 {
 	pio_init();
 	init_spi();
 
 	wlan_init( CC3000_UsynchCallback, sendWLFWPatch, sendDriverPatch, sendBootLoaderPatch, ReadWlanInterruptPin, WlanInterruptEnable, WlanInterruptDisable, WriteWlanPin);
-
-	wlan_start(patchesAvailableAtHost);
+	
+	wlan_start(0);
 
 	wlan_set_event_mask(HCI_EVNT_WLAN_KEEPALIVE|HCI_EVNT_WLAN_UNSOL_INIT|HCI_EVNT_WLAN_ASYNC_PING_REPORT);
 
@@ -147,11 +134,6 @@ int WiFiClass::begin(int patchesAvailableAtHost)
 	if(ulCC3000Connected==0)
 	return WL_DISCONNECTED;
 	else return WL_CONNECTED;
-}
-
-int WiFiClass::begin()
-{
-	return begin(0);
 }
 
 int WiFiClass::disconnect()
@@ -219,109 +201,8 @@ int WiFiClass::hostByName(const char* aHostname, IPAddress& aResult) {
 	return ret;
 }
 
-int WiFiClass::updateFirmware() {
-	int8_t mac_status = -1;
-	uint8_t cMacFromEeprom[MAC_ADDR_LEN];
-	uint8_t cRMParamsFromEeprom[128];
-	uint8_t ucStatus_Dr, ucStatus_FW, return_status = 0xFF;
-	uint16_t index;
-	uint8_t *pRMParams;
-	uint8_t counter = 0;
-
-	/* Read MAC address */
-	mac_status = nvmem_get_mac_address(cMacFromEeprom);
-
-	return_status = 1;
-	
-	while ((return_status) && (counter < 3))
-	{
-		/* Read RM parameters
-		 * Read in 16 parts to work with tiny driver */
-		
-		return_status = 0;
-		pRMParams = cRMParamsFromEeprom;
-		
-		for (index = 0; index < 16; index++)
-		{
-			return_status |= nvmem_read(NVMEM_RM_FILEID, 8, 8*index, pRMParams); 
-			pRMParams += 8;
-		}
-		counter++;
-	}
-
-	/* If RM file is not valid, load the default one */
-	if (counter == 3)
-	{
-		pRMParams = (unsigned char *)cRMdefaultParams;
-	}
-	else
-	{
-		pRMParams = cRMParamsFromEeprom;
-	}
-	
-	return_status = 1;
-
-	wlan_stop();
-	/* Give it a second to stop */
-	delay(1000);
-	/* Start indicating that there is a patch available */
-	wlan_start(1);
-	
-	return_status = 1;
-	
-	while (return_status)
-	{
-		/* write RM parameters
-		 * write in 4 parts to work with tiny driver */
-		return_status = 0;
-		
-		for (index = 0; index < 4; index++)
-		{
-			return_status |= nvmem_write(NVMEM_RM_FILEID, 32, 32*index, (pRMParams + 32*index)); 
-		}
-	}
-	
-	return_status = 1;
-	
-	/* write back the MAC address, only if exist */
-	if (mac_status == 0)
-	{
-		/* zero out MCAST bit if set */
-		cMacFromEeprom[0] &= 0xfe;
-		while (return_status)
-		{
-			return_status = nvmem_set_mac_address(cMacFromEeprom);
-		}
-	}
-
-	ucStatus_Dr = 1;
-
-	while (ucStatus_Dr)
-	{
-		/* Write driver patch to EEPRROM
-		 * Note that the array itself is changing between the different Service Packs */
-		ucStatus_Dr = nvmem_write_patch(NVMEM_WLAN_DRIVER_SP_FILEID, drv_length, wlan_drv_patch);
-	}
-	
-	ucStatus_FW = 1;
-	
-	while (ucStatus_FW)
-	{
-		/* Write FW patch to EEPRROM
-		 * Note that the array itself is changing between the different Service Packs */
-		ucStatus_FW = nvmem_write_patch(NVMEM_WLAN_FW_SP_FILEID, fw_length, fw_patch);
-	}
-	
-	/* Init board and request to load with patches. */
-	wlan_stop();
-	delay(1000);
-	wlan_start(0);
-}
-
-
 int WiFiClass::startSmartConfig()
-{
-	ulSmartConfigFinished = 0;
+{	ulSmartConfigFinished = 0;
 	ulCC3000Connected = 0;
 	ulCC3000DHCP = 0;
 	OkToDoShutDown=0;
@@ -333,13 +214,13 @@ int WiFiClass::startSmartConfig()
 	//Wait until CC3000 is disconnected
 	while (ulCC3000Connected == 1)
 	{
-		delay(500);;
+		//__delay_cycles(1000);
 	}
 	
 	// Trigger the Smart Config process
 
 	wlan_smart_config_set_prefix((char*)aucCC3000_prefix);
-
+     
 	
 	// Start the SmartConfig start process
 	wlan_smart_config_start(1);
@@ -348,13 +229,16 @@ int WiFiClass::startSmartConfig()
 	// Wait for Smartconfig process complete
 	while (ulSmartConfigFinished == 0)
 	{
-		delay(500);
+		
+		__delay_cycles(6000000);
+		
+		
 	}
 	
 
 #ifndef CC3000_UNENCRYPTED_SMART_CONFIG
 	// create new entry for AES encryption key
-	nvmem_create_entry(NVMEM_AES128_KEY_FILEID,16);
+	nvmem_create_entry(NVMEM_AES128_KEY_FILEID, 16);
 
 	// write AES key to NVMEM
 	aes_write_key((unsigned char *)(&smartconfigkey[0]));
@@ -362,20 +246,24 @@ int WiFiClass::startSmartConfig()
 	// Decrypt configuration information and add profile
 	wlan_smart_config_process();
 
-#endif
+#endif    
+	
 	// Configure to connect automatically to the AP retrieved in the 
 	// Smart config process
 	wlan_ioctl_set_connection_policy(DISABLE, DISABLE, ENABLE);
-
+	
 	// reset the CC3000
 	wlan_stop();
-
-	delay(1000);
-
+	delay(4000);
 	wlan_start(0);
-
+	
 	// Mask out all non-required events
 	wlan_set_event_mask(HCI_EVNT_WLAN_KEEPALIVE|HCI_EVNT_WLAN_UNSOL_INIT|HCI_EVNT_WLAN_ASYNC_PING_REPORT);
+
+	while (ulCC3000Connected  == 0)
+	{
+		delay(100);
+	}
 
 	return 0;
 }
