updated german localization
because l1684 was edited.

--- a/app/src/processing/app/Resources_de.properties
+++ b/app/src/processing/app/Resources_de.properties
@@ -598,7 +598,7 @@ Uploading...=Uploaden...
 
 #: Sketch.java:1684
 #, java-format
-Binary\ sketch\ size\:\ {0}\ bytes\ (of\ a\ {1}\ byte\ maximum)=Bin\u00e4re Sketchgr\u00f6\u00dfe\: {0} Bytes (von einem Maximum von {1} Bytes)
+Binary\ sketch\ size\:\ {0}\ bytes\ (of\ a\ {1}\ byte\ maximum)\,\ filling\ {2}\%=Bin\u00e4re Sketchgr\u00f6\u00dfe\: {0} Bytes (von einem Maximum von {1} Bytes), f\u00dcllt {2}\%
 
 #: Sketch.java:1689
 Couldn't\ determine\ program\ size\:\ {0}=Programmgr\u00f6\u00dfe konnte nicht festgestellt werden\: {0}
