updated english localization
because edited Sketch.java

--- a/app/src/processing/app/Resources_en.properties
+++ b/app/src/processing/app/Resources_en.properties
@@ -596,8 +596,7 @@
 #: Sketch.java:1684
 #, java-format
 
-!Binary\ sketch\ size\:\ {0}\ bytes\ (of\ a\ {1}\ byte\ maximum)=
-!Binary\ sketch\ size\:\ {0}\ bytes\ (of\ a\ {1}\ byte\ maximum)\,\ filling\ {2}\%
+!Binary\ sketch\ size\:\ {0}\ bytes\ (of\ a\ {1}\ byte\ maximum)\,\ filling\ {2}\%=
 #: Sketch.java:1689
 !Couldn't\ determine\ program\ size\:\ {0}=
 
